# graphics

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.sh
include/tracing/: camera.h  chapter_2.h  color.h  hittable.h  hittable_list.h  interval.h  sphere.h  utils.h  vec3.h
opengl/: CMakeLists.txt  build.sh  main.cpp  run.sh
opengl/include/: callbacks.h  camera.h  shader.h  utils.h
opengl/include/experiment/: char_3d.h  char_3d_constants.h  char_3d_utils.h  cube.h  engine.h  game_end_scene.h  index.h  letter.h  main_menu_scene.h  scene.h  snake.h  snake_scene.h  text.h  utils.h
opengl/include/lessons/: chp_10_camera.h  chp_5_hello_triangle.h  chp_6_shaders.h  chp_7_textures.h  chp_8_transform.h  chp_9_coordinate_systems.h  chp_9_exercises.h
opengl/shaders/chapter_10/: look_at.vert
opengl/shaders/chapter_6/: chp6_ex_1_1.vert  chp6_ex_1_2.frag  chp6_ex_1_2.vert  chp6_ex_1_3.frag  chp6_ex_1_3.vert
opengl/shaders/chapter_7/: ex_1.frag  ex_2.frag  ex_2.vert  ex_3.frag  generate_texture.frag
opengl/shaders/chapter_8/: ex_2.frag  transform.vert
opengl/shaders/chapter_9/: coords.frag
opengl/shaders/experiment/: simple.frag  simple.vert
opengl/src/examples/: glm_mat.cpp
opengl/src/experiment/: char_3d.cpp  engine.cpp  game_end_scene.cpp  index.cpp  letter.cpp  main_menu_scene.cpp  snake.cpp  snake_scene.cpp  unused.cpp
opengl/src/lessons/: chp_10_camera.cpp  chp_10_exercises.cpp  chp_5_exercises.cpp  chp_5_hello_triangle.cpp  chp_6_exercises.cpp  chp_6_shaders.cpp  chp_7_exercises.cpp  chp_7_textures.cpp  chp_8_exercises.cpp  chp_8_transform.cpp  chp_9_coordinate_systems.cpp  chp_9_exercises.cpp
raytracing/: CMakeLists.txt  setup.sh
raytracing/include/tracing/: camera.h  chapter.h  hittable.h  hittable_list.h  ray.h  sphere.h  utils.h
raytracing/src/: chapter.cpp
src/: chapter.cpp  chapter_2.cpp
